# lab-management

./: .gitignore  Procfile  README.md  app.py  config.py  init_db.py  package-lock.json  pyproject.toml  requirements.txt  routes.py
Utils/: auth.py  timezone.py  user.py
app/: __init__.py  package.json
app/routes/: auth.py  booking.py  dashboard.py  inventory.py  tasks.py  users.py
app/service/: auth.py  booking.py  db.py  inventory.py  tasks.py  timezone.py  user.py
app/templates/: base.html  booking.html  calendar.html  dashboard.html  equipment.html  inventory.html  login.html  tasks.html  user_management.html
routes/: auth.py  booking.py  dashboard.py  inventory.py  tasks.py  users.py
static/: style.css
templates/: base.html  booking.html  dashboard.html  home.html  inventory.html  login.html  signup.html  task.html  tasks.html  user_management.html  users.html
utils/: auth.py  booking.py  db.py  inventory.py  tasks.py  timezone.py  user.py
